--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "introduction to node",
   "license": "ISC",
   "author": "LeelooDallas",
-  "type": "commonjs",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/exercice/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
