--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "ISC",
   "author": "LeelooDallas",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
